feat: basic keying for saving state upon rerender

--- a/examples/todo-app/index.html
+++ b/examples/todo-app/index.html
@@ -9,7 +9,7 @@
   <body>
     <todo-app></todo-app>
 
-    <script type="module" src="./main.js"></script>
+    <script src="./dist/bundle.min.js"></script>
 
     <style>
       body {
